<resources>
    <string name="app_name">Coffee</string>
    <string name="coffee_name">Coffee Name</string>
    <string name="coffee_motto">Coffee Motto</string>
    <string name="menu">Menu</string>
    <string name="hot_coffee">Hot Coffee</string>
    <string name="cold_coffee">Cold Coffee</string>
    <string name="tea">Tea</string>
    <string name="cold_drinks">Cold Drinks</string>
    <string name="desserts">Desserts</string>
    <string name="americano">Americano</string>
    <string name="latte">Latte</string>
    <string name="espresso">Espresso</string>
    <string name="cartado">Cartado</string>
    <string name="capuccino">Capuccino</string>
    <string name="mocca">Mocca</string>
    <string name="filter_coffee">Filter Coffee</string>
    <string name="frappe">Frappe</string>
    <string name="frozen">Frozen</string>
    <string name="milkshake">Milkshake</string>
    <string name="ice_latte">Ice Latte</string>
    <string name="cheesecake">Cheesecake</string>
    <string name="tramisu">Tramisu</string>
    <string name="mozaik">Mozaik</string>
    <string name="blueberries">Blueberries</string>
    <string name="mono_latte">Mono Latte</string>
    <string name="red_love">Red Love</string>
    <string name="ay">Çay</string>
    <string name="aramol_aylar">Aramolı Çaylar</string>
    <string name="fincan_ay">Fincan Çay</string>
    <string name="_10">10₺</string>
    <string name="_15">15₺</string>
    <string name="su">Su</string>
    <string name="kant">Kant</string>
    <string name="soda">Soda</string>
    <string name="meyveli_soda">Meyveli Soda</string>
    <string name="cola">Cola</string>
    <string name="ev_yap_m_limonata">Ev Yapımı Limonata</string>
    <string name="mocha">Mocha</string>
</resources>